<resources>
    <string name="label_mobile_number">Mobile Number</string>
    <string name="label_otp">OTP</string>
    <string name="label_continue">Continue</string>
    <string name="label_send_otp">Send OTP</string>
    <string name="label_resend_otp">Resend OTP</string>
    <string name="placeholder_plus_91">+91%1$s</string>
    <string name="msg_no_internet">No internet connection</string>
    <string name="error_server_no_response">No response</string>
    <string name="error_server_connection_failed">Sorry! Failed to connect to the server</string>
    <string name="error_server_400bad_request">Sorry! Bad data</string>
    <string name="error_server_401unauthorized">Sorry! You\'re not authorized for this</string>
    <string name="error_server_403forbidden">Sorry! This action is forbidden</string>
    <string name="error_server_404not_found">Sorry! Resource does not exist</string>
    <string name="error_server_405not_allowed">Sorry! Action not allowed</string>
    <string name="error_server_500internal_error">Sorry! Server internal error</string>
    <string name="error_server_501not_implemented">Sorry! Service not implemented</string>
    <string name="error_server_502bad_gateway">Sorry! Remote server is unavailable</string>
    <string name="error_server_503unavailable">Sorry! Service unavailable</string>
    <string name="error_server_504gateway_timeout">Sorry! Remote server timed out</string>
    <string name="error_server_contract_broken">Sorry! Server error. Contract broken</string>
    <string name="error_something_went_wrong">Sorry! Something went wrong</string>
    <string name="error_something_went_wrong_try_again">Sorry! Something went wrong. Please try again.</string>
    <string name="msg_enter_valid_mobile_number">Enter valid mobile number please</string>
    <string name="msg_unable_send_sms_quota_exceeded">Unable to send SMS for now, The SMS quota for the project has been exceeded</string>
    <string name="msg_wait_auto_detecting_otp">Please wait, auto detecting OTP</string>
    <string name="msg_enter_mobile_number">Enter mobile number please</string>
    <string name="msg_otp_invalid_try_again">The verification code entered was invalid, please try again</string>
    <string name="msg_enter_otp_please">Enter OTP please!</string>
    <string name="menu_user_profile">User Profile</string>
    <string name="menu_home">Home</string>
    <string name="menu_group_truck">Truck</string>
    <string name="menu_group_truck_route">Truck Route</string>
    <string name="menu_add_truck_route">Add Truck Route</string>
    <string name="menu_find_truck_route">Find Truck Route</string>
    <string name="menu_my_truck_route">My Truck Route</string>
    <string name="menu_group_load">Load</string>
    <string name="menu_add_load">Add Load</string>
    <string name="menu_find_load">Find Load</string>
    <string name="menu_my_load">My Load</string>
    <string name="menu_group_other">Other</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="menu_logout">Logout</string>
    <string name="label_my_trucks">My Trucks</string>
    <string name="label_contractor_profile">Contractor Profile</string>
    <string name="label_admin_tools">Admin tools</string>
    <string name="label_name_of_the_user">Name of the user</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_first_name">First Name</string>
    <string name="label_last_name">Last Name</string>
    <string name="label_pan_card_number">PAN Card Number</string>
    <string name="label_aadhar_card_number">Aadhar Card Number</string>
    <string name="label_city">City</string>
    <string name="label_taluka">Taluka</string>
    <string name="label_district">District</string>
    <string name="label_state">State</string>
    <string name="label_pin_code">Pin Code</string>
    <string name="label_address_line_1">Address Line 1</string>
    <string name="label_address_line_2">Address Line 2</string>
    <string name="label_save">Save</string>
    <string name="msg_enter_first_name">Enter First Name</string>
    <string name="msg_enter_last_name">Enter Last Name</string>
    <string name="msg_enter_pan_card_number">Enter PAN Card Number</string>
    <string name="msg_enter_aadhar_card_number">Enter Aadhar Card Number</string>
    <string name="msg_enter_address_line1">Enter Address Line 1</string>
    <string name="msg_enter_address_line2">Enter Address Line 2</string>
    <string name="msg_enter_pin_code">Enter Pin Code</string>
    <string name="msg_enter_city_name">Enter City Name</string>
    <string name="msg_taluka_not_found_check_pin_code">Taluka not found please check Pin Code</string>
    <string name="msg_district_not_found_check_pin_code">District not found please check Pin Code</string>
    <string name="msg_state_not_found_check_pin_code">State not found please check Pin Code</string>
    <string name="msg_user_details_updated_successfully">User details updated successfully</string>
    <string name="msg_enter_valid_pan_card_number">Enter valid PAN Card Number</string>
    <string name="msg_enter_valid_aadhar_card_number">Enter valid Aadhar Card Number</string>
    <string name="label_email_id">Email Id</string>
    <string name="msg_enter_email_id">Enter Email Id</string>
    <string name="msg_enter_valid_email_id">Enter Valid Email</string>
    <string name="msg_confirm_logout">Are you sure you want to log out?</string>
    <string name="label_done">Done</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_firm_name">Firm Name</string>
    <string name="label_email_id_of_firm">Email Id of Firm</string>
    <string name="label_pan_card_number_of_firm">PAN Card Number of Firm</string>
    <string name="msg_enter_firm_name">Enter Firm Name</string>
    <string name="msg_contractor_profile_updated_successfully">Contractor profile updated successfully</string>
    <string name="msg_on_ui_exit">Looks like you made some changes here. Do you want to exit?</string>
    <string name="label_exit">Exit</string>
    <string name="label_user_profile">User profile</string>
    <string name="msg_add_truck_to_showcase">Add trucks to showcase here</string>
    <string name="label_truck_number">Truck Number</string>
    <string name="label_truck_type">Truck Type</string>
    <string name="label_truck_chesse_number">Truck Chesse Number</string>
    <string name="label_add_truck">Add truck</string>
    <string name="label_edit_truck">Edit Truck</string>
    <string name="label_delete_truck">Delete Truck</string>
    <string name="msg_confirm_delete">Are you sure you want to delete it?</string>
    <string name="msg_confirm_reject">Are you sure you want to reject it?</string>
    <string name="label_yes">Yes</string>
    <string name="msg_enter_truck_number">Enter truck number</string>
    <string name="msg_select_truck_type">Select truck type</string>
    <string name="msg_enter_truck_chesse_number">Enter truck chesse number</string>
    <string name="msg_truck_details_saved_successfully">Truck details saved successfully</string>
    <string name="label_from_city">From City</string>
    <string name="label_to_city">To City</string>
    <string name="label_journey_start_date">Journey Start Date</string>
    <string name="label_journey_end_date">Journey End Date</string>
    <string name="mag_add_truck_route">Your Trucks are not approved by admin yet</string>
    <string name="msg_truck_route_details_saved_successfully">Truck Route details saved successfully</string>
    <string name="error_truck_already_added">Truck is already added</string>
    <string name="msg_select_truck_number">Select Truck Number</string>
    <string name="msg_select_from_city">Select from city</string>
    <string name="msg_select_to_city">Select to city</string>
    <string name="msg_select_journey_start_date">Select journey start date</string>
    <string name="msg_select_journey_end_date">Select journey end date</string>
    <string name="msg_journey_end_date_greater_journey_start_date">Journey end date should be greater then journey start date</string>
    <string name="label_unknown_location">Unknown location</string>
    <string name="msg_truck_routes_not_added_yet">Truck routes not added yet</string>
    <string name="label_edit_truck_route">Edite Truck Route</string>
    <string name="label_delete_truck_route">Delete Truck Route</string>
    <string name="label_my_truck_routes">My Truck  Routes</string>
    <string name="placeholder_x_to_y">%1$s to %2$s</string>
    <string name="placeholder_x_dash_y_dash_z">%1$s-%2$s-%3$s</string>
    <string name="label_name_of_goods">Name of Goods</string>
    <string name="label_material_type">Material Type</string>
    <string name="label_rate_per_ton">Rate per Ton</string>
    <string name="label_total_load_in_tons">Total Load in Tons</string>
    <string name="label_total_amount">Total Amount</string>
    <string name="label_transit_days">Transit Days</string>
    <string name="msg_load_details_saved_successfully">Load details saved successfully</string>
    <string name="msg_enter_goods_name">Enter goods name</string>
    <string name="msg_select_material_ype">select material type</string>
    <string name="msg_enter_rate_per_ton">Enter rate per ton</string>
    <string name="msg_enter_total_load_in_tons">Enter total load in tons</string>
    <string name="msg_enter_transit_days">Enter transit days</string>
    <string name="msg_unable_to_calculate_total_amount">Unable  to calculate total amount</string>
    <string name="label_edit_load">Edit Load</string>
    <string name="label_delete_load">Delete Load</string>
    <string name="label_my_loads">My Loads</string>
    <string name="placeholder_x_ton">%1$s Tons</string>
    <string name="placeholder_x_rs">%1$s ₹</string>
    <string name="label_name">Name</string>
    <string name="label_email">Email</string>
    <string name="label_address">"Address</string>
    <string name="label_chesse_number">Chesse Number</string>
    <string name="label_location">"Location</string>
    <string name="label_date">Date</string>
    <string name="label_total_load">Total Load</string>
    <string name="label_expected_pickup_date">Expected Pickup Date</string>
    <string name="msg_select_expected_pickup_date">Select expected pickup date</string>
    <string name="label_past_truck_routes">Past Truck Routes</string>
    <string name="label_past_loads">Past Loads</string>
    <string name="msg_loads_not_added_yet">Loads not added yet</string>
    <string name="label_filters">Filters</string>
    <string name="label_apply">Apply</string>
    <string name="msg_data_not_found">Data not found</string>
    <string name="label_owner_name">Owner Name</string>
    <string name="msg_enter_owner_name">Enter Owner Name</string>
    <string name="label_truck_owner">Truck Owner</string>
    <string name="label_pending">Pending</string>
    <string name="label_approved">Approved</string>
    <string name="label_rejected">Rejected</string>
    <string name="label_manage_users">Manage Users</string>
    <string name="label_manage_trucks">Manage Trucks</string>
    <string name="msg_trucks_not_available">Trucks not available</string>
    <string name="msg_users_not_available">Users not available</string>
    <string name="label_reject_user">Reject User</string>
    <string name="label_approve_user">Approve User</string>
    <string name="label_move_user_to_pending">Move User to Pending</string>
    <string name="label_reject_truck">Reject Truck</string>
    <string name="label_approve_truck">Approve Truck</string>
    <string name="label_move_truck_to_pending">Move Truck to Pending</string>
    <string name="msg_action_deny">You do not have sufficient permission to do this action!</string>
    <string name="msg_app_access_deny">Your access of the app is restricted. For any query contact us.</string>
    <string name="msg_call_x">Call %1$s</string>
</resources>